--- a/index.html
+++ b/index.html
@@ -3,11 +3,43 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <div class="container">
+      <!-- navbar -->
+      <nav class="navbar">
+
+        <div class="logo">
+          <img src="my_logo.png">
+        </div>
+
+        <div class="union">
+          <img src="union.png">
+        </div>
+
+      </nav>
+    <!-- introduction -->
+      <section class="introduction">
+        <h1 class="header">
+          I'm Aleem <br>
+          Glad to see <br>
+          you!
+        </h1>
+        <p class="intro">
+          I’m a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+        </p>
+        <p>
+          LET’S CONNECT
+        </p>
+        <p class="profiles">
+          <img src="twitter.png">
+          <img src="linkedin.png">
+          <img src="github.png">
+        </p>
+      </section>
+
+    </div>
   </body>
 </html>
