--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
@@ -28,16 +29,14 @@
           you!
         </h1>
         <p class="intro">
-          I’m a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+          I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
         </p>
-        <p>
-          LET’S CONNECT
-        </p>
-        <p class="profiles">
-          <img src="twitter.png">
-          <img src="linkedin.png">
-          <img src="github.png">
-        </p>
+        <a href="" class="button">LET'S CONNECT</a>
+        <ul class="profiles">
+          <li><a href=""><img src="twitter.png"></a></li>
+          <li><a href=""><img src="linkedin.png"></a></li>
+          <li><a href=""><img src="github.png"></a></li>
+        </ul>
       </section>
 
     </div>
