--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </p>
         <a href="" class="button">LET'S CONNECT</a>
         <ul class="profiles">
-          <li><a href=""><img src="twitter.png"></a></li>
-          <li><a href=""><img src="linkedin.png"></a></li>
-          <li><a href=""><img src="github.png"></a></li>
+          <li><a href="https://twitter.com/MAleemHashmi1"><img src="twitter.png"></a></li>
+          <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img src="linkedin.png"></a></li>
+          <li><a href="https://github.com/MAleemH"><img src="github.png"></a></li>
         </ul>
       </section>
 
