work section file created with css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="work-section.css">
   </head>
   <body>
     <div class="container">
@@ -21,7 +22,7 @@
         </div>
 
       </nav>
-    <!-- introduction -->
+      <!-- introduction -->
       <section class="introduction">
         <h1 class="header">
           I'm Aleem <br>
@@ -38,6 +39,34 @@
           <li><a href="https://github.com/MAleemH"><img src="github.png"></a></li>
         </ul>
       </section>
+    </div>
+    <!-- "Works" section -->
+    <div class="works-section">
+
+      <div class="grid-container">
+
+        <!-- item 1: tonic -->
+        <div class="grid-item">
+
+          <img src="images/tonic.png" alt="Tonic">
+          <h1>Tonic</h1>
+          <h6>CANOPY</h6>
+          <ul>
+            <li>Back End Dev</li>
+            <li>2015</li>
+          </ul>
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          <ul>
+            <li>html</li>
+            <li>css</li>
+            <li>javaScript</li>
+          </ul>
+          <button><a href="">See Project</a></button>
+
+        </div>
+
+        <!-- item 2: multi-post stories -->
+      </div>
 
     </div>
   </body>
