--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" type="text/css" href="work-section.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/work-section.css">
   </head>
   <body>
     <div class="container">
@@ -14,11 +14,11 @@
       <nav class="navbar">
 
         <div class="logo">
-          <img src="my_logo.png">
+          <img src="images/my_logo.png">
         </div>
 
         <div class="union">
-          <img src="union.png">
+          <img src="images/union.png">
         </div>
 
       </nav>
@@ -34,9 +34,9 @@
         </p>
         <a href="" class="button">LET'S CONNECT</a>
         <ul class="profiles">
-          <li><a href="https://twitter.com/MAleemHashmi1"><img src="twitter.png"></a></li>
-          <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img src="linkedin.png"></a></li>
-          <li><a href="https://github.com/MAleemH"><img src="github.png"></a></li>
+          <li><a href="https://twitter.com/MAleemHashmi1"><img src="images/twitter.png"></a></li>
+          <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img src="images/linkedin.png"></a></li>
+          <li><a href="https://github.com/MAleemH"><img src="images/github.png"></a></li>
         </ul>
       </section>
     </div>
@@ -49,14 +49,18 @@
         <div class="grid-item">
 
           <img src="images/tonic.png" alt="Tonic">
-          <h1>Tonic</h1>
-          <h6>CANOPY</h6>
-          <ul>
-            <li>Back End Dev</li>
-            <li>2015</li>
-          </ul>
+          <h1 class="project-title">Tonic</h1>
+
+          <div class="canopy">
+            <h6>CANOPY</h6>
+            <ul class="canopy-ul">
+              <li>Back End Dev</li>
+              <li>2015</li>
+            </ul>
+          </div>
+
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
-          <ul>
+          <ul class="languages">
             <li>html</li>
             <li>css</li>
             <li>javaScript</li>
