middle section completed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/work-section.css">
+    <link rel="stylesheet" type="text/css" href="css/about-myself.css">
   </head>
   <body>
     <div class="container">
@@ -48,7 +49,7 @@
         <!-- item 1: tonic -->
         <div class="grid-item">
 
-          <img src="images/tonic.png" alt="Tonic">
+          <img src="images/portfolio_1.png" alt="Tonic">
           <h1 class="project-title">Tonic</h1>
 
           <div class="canopy">
@@ -65,13 +66,140 @@
             <li>css</li>
             <li>javaScript</li>
           </ul>
-          <button><a href="">See Project</a></button>
+          <a href="" class="button btn-border">See Project</a>
 
         </div>
 
         <!-- item 2: multi-post stories -->
+        <div class="grid-item">
+
+          <img src="images/portfolio_2.png" alt="Tonic">
+          <h1 class="project-title">Multi-Post <br> Stories</h1>
+
+          <div class="canopy">
+            <h6>CANOPY</h6>
+            <ul class="canopy-ul">
+              <li>Back End Dev</li>
+              <li>2015</li>
+            </ul>
+          </div>
+
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          <ul class="languages">
+            <li>html</li>
+            <li>css</li>
+            <li>javaScript</li>
+          </ul>
+          <a href="" class="button btn-border">See Project</a>
+
+        </div>
+        <!-- item 3: tonic -->
+        <div class="grid-item">
+
+          <img src="images/portfolio_3.png" alt="Tonic">
+          <h1 class="project-title">Tonic</h1>
+
+          <div class="canopy">
+            <h6>CANOPY</h6>
+            <ul class="canopy-ul">
+              <li>Back End Dev</li>
+              <li>2015</li>
+            </ul>
+          </div>
+
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          <ul class="languages">
+            <li>html</li>
+            <li>css</li>
+            <li>javaScript</li>
+          </ul>
+          <a href="" class="button btn-border">See Project</a>
+
+        </div>
+
+        <!-- item 4: multi-post stories -->
+        <div class="grid-item">
+
+          <img src="images/portfolio_4.png" alt="Tonic">
+          <h1 class="project-title">Multi-Post <br> Stories</h1>
+
+          <div class="canopy">
+            <h6>CANOPY</h6>
+            <ul class="canopy-ul">
+              <li>Back End Dev</li>
+              <li>2015</li>
+            </ul>
+          </div>
+
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+          <ul class="languages">
+            <li>html</li>
+            <li>css</li>
+            <li>javaScript</li>
+          </ul>
+          <a href="" class="button btn-border">See Project</a>
+
+        </div>
+
       </div>
 
     </div>
+    <!-- About Myself -->
+    <div class="about-myself">
+
+      <div class="flex-container">
+
+        <div class="flex-item">
+          <h1 class="header">About Myself</h1>
+        </div>
+
+        <div class="flex-item">
+          <p class="intro">
+            I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+          </p>
+        </div>
+
+        <div class="flex-item">
+          <a href="" class="button">LET'S CONNECT</a>
+        </div>
+
+        <div class="flex-item">
+          <ul class="profiles">
+            <li><a href="https://twitter.com/MAleemHashmi1"><img src="images/twitter.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img src="images/linkedin.png"></a></li>
+            <li><a href="https://github.com/MAleemH"><img src="images/github.png"></a></li>
+          </ul>
+        </div>
+
+        <div class="flex-item">
+          <a href="" class="button resume-btn-border">Get my resume</a>
+        </div>
+
+        <div class="flex-item">
+          <ul class="others">
+            <section class="others-section-i">
+              <li class="others-item-1">Languages</li>
+              <li class="others-arrow"><img src="images/down-arrow.png" alt="Down Arrow"></li>
+            </section>
+            <section class="languages-section">
+              <li><img src="images/js.png" alt="JavaScript"></li>
+              <li><img src="images/html.png" alt="HTML"></li>
+              <li><img src="images/css.png" alt="CSS"></li>
+            </section>
+            <section class="others-section-ii">
+              <li class="others-item-2">Frameworks</li>
+              <li class="others-item-2"><img src="images/right-arrow.png" alt="Right Arrow"></li>
+            </section>
+            <section class="others-section-ii">
+              <li class="others-item-3">Skills</li>
+              <li class="others-arrow"><img src="images/right-arrow.png" alt="Right Arrow"></li>
+            </section>
+          </ul>
+        </div>
+
+      </div>
+
+    </div>
+
   </body>
 </html>
