made my code proper documented in html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/about-myself.css">
   </head>
   <body>
-    <div class="container">
+    <section class="container">
       <!-- navbar -->
       <nav class="navbar">
 
@@ -24,7 +24,7 @@
 
       </nav>
       <!-- introduction -->
-      <section class="introduction">
+      <div class="introduction">
         <h1 class="header">
           I'm Aleem <br>
           Glad to see <br>
@@ -39,18 +39,18 @@
           <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img src="images/linkedin.png"></a></li>
           <li><a href="https://github.com/MAleemH"><img src="images/github.png"></a></li>
         </ul>
-      </section>
-    </div>
+      </div>
+    </section>
     <!-- "Works" section -->
-    <div class="works-section">
+    <section class="works-section">
 
       <div class="grid-container">
 
         <!-- item 1: tonic -->
         <div class="grid-item">
-
+          
           <img src="images/portfolio_1.png" alt="Tonic">
-          <h1 class="project-title">Tonic</h1>
+          <h2 class="project-title">Tonic</h2>
 
           <div class="canopy">
             <h6>CANOPY</h6>
@@ -74,7 +74,7 @@
         <div class="grid-item">
 
           <img src="images/portfolio_2.png" alt="Tonic">
-          <h1 class="project-title">Multi-Post <br> Stories</h1>
+          <h2 class="project-title">Multi-Post <br> Stories</h2>
 
           <div class="canopy">
             <h6>CANOPY</h6>
@@ -97,7 +97,7 @@
         <div class="grid-item">
 
           <img src="images/portfolio_3.png" alt="Tonic">
-          <h1 class="project-title">Tonic</h1>
+          <h2 class="project-title">Tonic</h2>
 
           <div class="canopy">
             <h6>CANOPY</h6>
@@ -121,7 +121,7 @@
         <div class="grid-item">
 
           <img src="images/portfolio_4.png" alt="Tonic">
-          <h1 class="project-title">Multi-Post <br> Stories</h1>
+          <h2 class="project-title">Multi-Post <br> Stories</h2>
 
           <div class="canopy">
             <h6>CANOPY</h6>
@@ -143,14 +143,14 @@
 
       </div>
 
-    </div>
+    </section>
     <!-- About Myself -->
-    <div class="about-myself">
+    <section class="about-myself">
 
       <div class="flex-container">
 
         <div class="flex-item">
-          <h1 class="header">About Myself</h1>
+          <h2 class="header">About Myself</h2>
         </div>
 
         <div class="flex-item">
@@ -199,7 +199,7 @@
 
       </div>
 
-    </div>
+    </section>
 
   </body>
 </html>
