replaced img tags with background img

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- item 1: tonic -->
         <div class="grid-item">
           
-          <img src="images/portfolio_1.png" alt="Tonic">
+          <div class="portfolio-image-1"></div>
           <h2 class="project-title">Tonic</h2>
 
           <div class="canopy">
@@ -73,7 +73,7 @@
         <!-- item 2: multi-post stories -->
         <div class="grid-item">
 
-          <img src="images/portfolio_2.png" alt="Tonic">
+          <div class="portfolio-image-2"></div>
           <h2 class="project-title">Multi-Post <br> Stories</h2>
 
           <div class="canopy">
@@ -96,7 +96,7 @@
         <!-- item 3: tonic -->
         <div class="grid-item">
 
-          <img src="images/portfolio_3.png" alt="Tonic">
+          <div class="portfolio-image-3"></div>
           <h2 class="project-title">Tonic</h2>
 
           <div class="canopy">
@@ -120,7 +120,7 @@
         <!-- item 4: multi-post stories -->
         <div class="grid-item">
 
-          <img src="images/portfolio_4.png" alt="Tonic">
+          <div class="portfolio-image-4"></div>
           <h2 class="project-title">Multi-Post <br> Stories</h2>
 
           <div class="canopy">
