footer section created

--- a/index.html
+++ b/index.html
@@ -200,6 +200,13 @@
       </div>
 
     </section>
-
+    <!-- Contact Me -->
+    <footer class="contact-me">
+      <div class="flex-container">
+        <div class="flex-item">
+          <h1>Contact Me</h1>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
