Create contactform.css file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/work-section.css">
     <link rel="stylesheet" type="text/css" href="css/about-myself.css">
+    <link rel="stylesheet" type="text/css" href="css/contactform.css">
   </head>
   <body>
     <section class="container">
