Add changes to index.html and contactform.css

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
     <!-- Contact Me -->
     <footer class="contact-me">
       <div class="flex-container">
-        <div class="flex-item">
-          <h1>Contact Me</h1>
+        <div class="flex-item contact_form header">
+          <h1 class="header">Contact Me</h1>
         </div>
       </div>
     </footer>
