changes contact form css file name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/work-section.css">
     <link rel="stylesheet" type="text/css" href="css/about-myself.css">
-    <link rel="stylesheet" type="text/css" href="css/contactform.css">
+    <link rel="stylesheet" type="text/css" href="css/contact-form.css">
   </head>
   <body>
     <section class="container">
@@ -204,8 +204,8 @@
     <!-- Contact Me -->
     <footer class="contact-me">
       <div class="flex-container">
-        <div class="flex-item contact_form header">
-          <h1 class="header">Contact Me</h1>
+        <div class="flex-item">
+          <h2>Contact Me</h2>
         </div>
       </div>
     </footer>
