added form into contact me section and gave some style

--- a/index.html
+++ b/index.html
@@ -203,9 +203,22 @@
     </section>
     <!-- Contact Me -->
     <footer class="contact-me">
-      <div class="flex-container">
-        <div class="flex-item">
-          <h2>Contact Me</h2>
+      <div class="contact-container">
+        <div class="contact-item">
+          <h2 class="contact-heading">Contact me</h2>
+        </div>
+        <div class="contact-item">
+          <p class="contact-description">
+            If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it
+          </p>
+        </div>
+        <div class="contact-item">
+          <form action="" method="post">
+            <input class="form-input" type="text" name="name">
+            <input class="form-input" type="text" name="email">
+            <textarea class="form-input" name="description" id="" cols="30" rows="10"></textarea>
+            <button class="button contact-button" type="submit">Get It Touch</button>
+          </form>
         </div>
       </div>
     </footer>
