navbar options added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
           <img src="images/union.png">
         </div>
 
+        <div class="nav-options">
+
+          <ul class="nav-options-ul">
+
+            <li class="nav-options-ul-li">Portfolio</li>
+            <li class="nav-options-ul-li">About</li>
+            <li class="nav-options-ul-li">Contact</li>
+
+          </ul>
+
+        </div>
+
       </nav>
       <!-- introduction -->
       <div class="introduction">
