header section completed according to figma desktop version

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
           <ul class="nav-options-ul">
 
-            <li class="nav-options-ul-li">Portfolio</li>
-            <li class="nav-options-ul-li">About</li>
-            <li class="nav-options-ul-li">Contact</li>
+            <li class="nav-options-ul-li"><a class="nav-options-ul-li-a" href="">Portfolio</a></li>
+            <li class="nav-options-ul-li"><a class="nav-options-ul-li-a" href="">About</a></li>
+            <li class="nav-options-ul-li"><a class="nav-options-ul-li-a" href="">Contact</a></li>
 
           </ul>
 
@@ -38,20 +38,22 @@
       </nav>
       <!-- introduction -->
       <div class="introduction">
-        <h1 class="header">
-          I'm Aleem <br>
-          Glad to see <br>
-          you!
-        </h1>
-        <p class="intro">
-          I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
-        </p>
-        <a href="" class="button">LET'S CONNECT</a>
-        <ul class="profiles">
-          <li><a href="https://twitter.com/MAleemHashmi1"><img src="images/twitter.png"></a></li>
-          <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img src="images/linkedin.png"></a></li>
-          <li><a href="https://github.com/MAleemH"><img src="images/github.png"></a></li>
-        </ul>
+        <div class="intro-area">
+          <h1 class="header">
+            I'm Aleem <br>
+            Glad to see <br>
+            you!
+          </h1>
+          <p class="intro">
+            I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+          </p>
+          <a href="" class="button">LET'S CONNECT</a>
+          <ul class="profiles">
+            <li><a href="https://twitter.com/MAleemHashmi1"><img src="images/twitter.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img src="images/linkedin.png"></a></li>
+            <li><a href="https://github.com/MAleemH"><img src="images/github.png"></a></li>
+          </ul>
+        </div>
       </div>
     </section>
     <!-- "Works" section -->
