desktop about section completed

--- a/index.html
+++ b/index.html
@@ -245,27 +245,15 @@
 
         <div class="flex-item">
           <h2 class="header">About Myself</h2>
-        </div>
-
-        <div class="flex-item">
           <p class="intro">
-            I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+            I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me.
           </p>
-        </div>
-
-        <div class="flex-item">
-          <a href="" class="button">LET'S CONNECT</a>
-        </div>
-
-        <div class="flex-item">
+          <a href="" class="button button-2">LET'S CONNECT</a>
           <ul class="profiles">
             <li><a href="https://twitter.com/MAleemHashmi1"><img src="images/twitter.png"></a></li>
             <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img src="images/linkedin.png"></a></li>
             <li><a href="https://github.com/MAleemH"><img src="images/github.png"></a></li>
           </ul>
-        </div>
-
-        <div class="flex-item">
           <a href="" class="button resume-btn-border">Get my resume</a>
         </div>
 
@@ -279,6 +267,11 @@
               <li><img src="images/js.png" alt="JavaScript"></li>
               <li><img src="images/html.png" alt="HTML"></li>
               <li><img src="images/css.png" alt="CSS"></li>
+            </section>
+            <section class="dt-languages-section">
+              <li><img src="images/dt-js.png" alt="JavaScript"></li>
+              <li><img src="images/dt-html.png" alt="HTML"></li>
+              <li><img src="images/dt-css.png" alt="CSS"></li>
             </section>
             <section class="others-section-ii">
               <li class="others-item-2">Frameworks</li>
