desktop contact form completed

--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
       <div class="contact-container">
 
         <div class="contact-item">
-          <h2 class="contact-heading">Contact me</h2>
-        </div>
 
-        <div class="contact-item">
+          <h2 class="contact-heading">Contact me</h2>
+
           <p class="contact-description">
             If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it
           </p>
+
         </div>
 
         <div class="contact-item">
@@ -308,7 +308,7 @@
             <input class="form-input" type="text" name="name" maxlength="30" placeholder="Name" required>
             <input class="form-input" type="email" name="email" placeholder="Email" required>
             <textarea class="form-input" name="message" maxlength="500" cols="30" rows="10" placeholder="Write your message here" required></textarea>
-            <button class="button contact-button" type="submit">Get It Touch</button>
+            <button class="button contact-button" type="submit">Get In Touch</button>
           </form>
 
         </div>
