alt attribute added in all img tags

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <nav class="navbar">
 
         <div class="logo">
-          <img src="images/my_logo.png">
+          <img alt="Portfolio Logo" src="images/my_logo.png">
         </div>
 
         <div class="union">
-          <img src="images/union.png">
+          <img alt="More Options" src="images/union.png">
         </div>
 
         <div class="nav-options">
@@ -49,9 +49,9 @@
           </p>
           <a href="" class="button">LET'S CONNECT</a>
           <ul class="profiles">
-            <li><a href="https://twitter.com/MAleemHashmi1"><img src="images/twitter.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img src="images/linkedin.png"></a></li>
-            <li><a href="https://github.com/MAleemH"><img src="images/github.png"></a></li>
+            <li><a href="https://twitter.com/MAleemHashmi1"><img alt="Twitter" src="images/twitter.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img alt="LinkedIn" src="images/linkedin.png"></a></li>
+            <li><a href="https://github.com/MAleemH"><img alt="GitHub" src="images/github.png"></a></li>
           </ul>
         </div>
       </div>
@@ -250,9 +250,9 @@
           </p>
           <a href="" class="button button-2">LET'S CONNECT</a>
           <ul class="profiles">
-            <li><a href="https://twitter.com/MAleemHashmi1"><img src="images/twitter.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img src="images/linkedin.png"></a></li>
-            <li><a href="https://github.com/MAleemH"><img src="images/github.png"></a></li>
+            <li><a href="https://twitter.com/MAleemHashmi1"><img alt="not found" src="images/twitter.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img alt="not found" src="images/linkedin.png"></a></li>
+            <li><a href="https://github.com/MAleemH"><img alt="not found" src="images/github.png"></a></li>
           </ul>
           <a href="" class="button resume-btn-border">Get my resume</a>
         </div>
@@ -261,25 +261,25 @@
           <ul class="others">
             <section class="others-section-i">
               <li class="others-item-1">Languages</li>
-              <li class="others-arrow"><img src="images/down-arrow.png" alt="Down Arrow"></li>
+              <li class="others-arrow"><img alt="not found" src="images/down-arrow.png" alt="Down Arrow"></li>
             </section>
             <section class="languages-section">
-              <li><img src="images/js.png" alt="JavaScript"></li>
-              <li><img src="images/html.png" alt="HTML"></li>
-              <li><img src="images/css.png" alt="CSS"></li>
+              <li><img alt="not found" src="images/js.png" alt="JavaScript"></li>
+              <li><img alt="not found" src="images/html.png" alt="HTML"></li>
+              <li><img alt="not found" src="images/css.png" alt="CSS"></li>
             </section>
             <section class="dt-languages-section">
-              <li><img src="images/dt-js.png" alt="JavaScript"></li>
-              <li><img src="images/dt-html.png" alt="HTML"></li>
-              <li><img src="images/dt-css.png" alt="CSS"></li>
+              <li><img alt="not found" src="images/dt-js.png" alt="JavaScript"></li>
+              <li><img alt="not found" src="images/dt-html.png" alt="HTML"></li>
+              <li><img alt="not found" src="images/dt-css.png" alt="CSS"></li>
             </section>
             <section class="others-section-ii">
               <li class="others-item-2">Frameworks</li>
-              <li class="others-item-2"><img src="images/right-arrow.png" alt="Right Arrow"></li>
+              <li class="others-item-2"><img alt="not found" src="images/right-arrow.png" alt="Right Arrow"></li>
             </section>
             <section class="others-section-ii">
               <li class="others-item-3">Skills</li>
-              <li class="others-arrow"><img src="images/right-arrow.png" alt="Right Arrow"></li>
+              <li class="others-arrow"><img alt="not found" src="images/right-arrow.png" alt="Right Arrow"></li>
             </section>
           </ul>
         </div>
