enclosed li inside ul and adjusted h tag

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
             <h2 class="project-title-dt">Tonic</h2>
 
             <div class="client">
-              <h6>CANOPY</h6>
+              <h3>CANOPY</h3>
               <ul class="client-ul">
                 <li>Back End Dev</li>
                 <li>2015</li>
               </ul>
             </div>
             <div class="client-dt">
-              <h6>CANOPY</h6>
+              <h3>CANOPY</h3>
               <ul class="client-dt-ul">
                 <li>Back End Dev</li>
                 <li>2015</li>
@@ -114,14 +114,14 @@
             <h2 class="project-title-dt">Multi-Post Stories</h2>
 
             <div class="client">
-              <h6>CANOPY</h6>
+              <h3>CANOPY</h3>
               <ul class="client-ul">
                 <li>Back End Dev</li>
                 <li>2015</li>
               </ul>
             </div>
             <div class="client-dt">
-              <h6>FACEBOOK</h6>
+              <h3>FACEBOOK</h3>
               <ul class="client-dt-ul">
                 <li>Full Stack Dev</li>
                 <li>2015</li>
@@ -157,14 +157,14 @@
             <h2 class="project-title-dt">Facebook 360</h2>
 
             <div class="client">
-              <h6>CANOPY</h6>
+              <h3>CANOPY</h3>
               <ul class="client-ul">
                 <li>Back End Dev</li>
                 <li>2015</li>
               </ul>
             </div>
             <div class="client-dt">
-              <h6>FACEBOOK</h6>
+              <h3>FACEBOOK</h3>
               <ul class="client-dt-ul">
                 <li>Full Stack Dev</li>
                 <li>2015</li>
@@ -201,14 +201,14 @@
             <h2 class="project-title-dt">Uber Navigation</h2>
 
             <div class="client">
-              <h6>CANOPY</h6>
+              <h3>CANOPY</h3>
               <ul class="client-ul">
                 <li>Back End Dev</li>
                 <li>2015</li>
               </ul>
             </div>
             <div class="client-dt">
-              <h6>UBER</h6>
+              <h3>UBER</h3>
               <ul class="client-dt-ul">
                 <li>Lead Developer</li>
                 <li>2018</li>
@@ -258,30 +258,30 @@
         </div>
 
         <div class="flex-item">
-          <ul class="others">
-            <section class="others-section-i">
+          <div class="others">
+            <ul class="others-section-i">
               <li class="others-item-1">Languages</li>
               <li class="others-arrow"><img alt="not found" src="images/down-arrow.png" alt="Down Arrow"></li>
-            </section>
-            <section class="languages-section">
+            </ul>
+            <ul class="languages-section">
               <li><img alt="not found" src="images/js.png" alt="JavaScript"></li>
               <li><img alt="not found" src="images/html.png" alt="HTML"></li>
               <li><img alt="not found" src="images/css.png" alt="CSS"></li>
-            </section>
-            <section class="dt-languages-section">
+            </ul>
+            <ul class="dt-languages-section">
               <li><img alt="not found" src="images/dt-js.png" alt="JavaScript"></li>
               <li><img alt="not found" src="images/dt-html.png" alt="HTML"></li>
               <li><img alt="not found" src="images/dt-css.png" alt="CSS"></li>
-            </section>
-            <section class="others-section-ii">
+            </ul>
+            <ul class="others-section-ii">
               <li class="others-item-2">Frameworks</li>
               <li class="others-item-2"><img alt="not found" src="images/right-arrow.png" alt="Right Arrow"></li>
-            </section>
-            <section class="others-section-ii">
+            </ul>
+            <ul class="others-section-ii">
               <li class="others-item-3">Skills</li>
               <li class="others-arrow"><img alt="not found" src="images/right-arrow.png" alt="Right Arrow"></li>
-            </section>
-          </ul>
+            </ul>
+          </div>
         </div>
 
       </div>
