--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
+    <title>Muhammad Aleem Portfolio</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/work-section.css">
@@ -16,11 +16,11 @@
       <nav class="navbar">
 
         <div class="logo">
-          <img alt="Portfolio Logo" src="images/my_logo.png">
+          <img alt="Portfolio-Logo" src="images/my_logo.png">
         </div>
 
         <div class="union">
-          <img alt="More Options" src="images/union.png">
+          <img alt="More-Options-Button" src="images/union.png">
         </div>
 
         <div class="nav-options">
@@ -49,9 +49,9 @@
           </p>
           <a href="" class="button">LET'S CONNECT</a>
           <ul class="profiles">
-            <li><a href="https://twitter.com/MAleemHashmi1"><img alt="Twitter" src="images/twitter.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img alt="LinkedIn" src="images/linkedin.png"></a></li>
-            <li><a href="https://github.com/MAleemH"><img alt="GitHub" src="images/github.png"></a></li>
+            <li><a href="https://twitter.com/MAleemHashmi1"><img alt="Twitter-Image" src="images/twitter.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img alt="LinkedIn-Image" src="images/linkedin.png"></a></li>
+            <li><a href="https://github.com/MAleemH"><img alt="GitHub-Image" src="images/github.png"></a></li>
           </ul>
         </div>
       </div>
@@ -250,9 +250,9 @@
           </p>
           <a href="" class="button button-2">LET'S CONNECT</a>
           <ul class="profiles">
-            <li><a href="https://twitter.com/MAleemHashmi1"><img alt="not found" src="images/twitter.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img alt="not found" src="images/linkedin.png"></a></li>
-            <li><a href="https://github.com/MAleemH"><img alt="not found" src="images/github.png"></a></li>
+            <li><a href="https://twitter.com/MAleemHashmi1"><img alt="Twitter-Image" src="images/twitter.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/muhammad-aleem-hashmi-09658a171/"><img alt="LinkedIn-Image" src="images/linkedin.png"></a></li>
+            <li><a href="https://github.com/MAleemH"><img alt="GitHub-Image" src="images/github.png"></a></li>
           </ul>
           <a href="" class="button resume-btn-border">Get my resume</a>
         </div>
@@ -261,25 +261,25 @@
           <div class="others">
             <ul class="others-section-i">
               <li class="others-item-1">Languages</li>
-              <li class="others-arrow"><img alt="not found" src="images/down-arrow.png" alt="Down Arrow"></li>
+              <li class="others-arrow"><img alt="More-Icon" src="images/down-arrow.png" alt="Down Arrow"></li>
             </ul>
             <ul class="languages-section">
-              <li><img alt="not found" src="images/js.png" alt="JavaScript"></li>
-              <li><img alt="not found" src="images/html.png" alt="HTML"></li>
-              <li><img alt="not found" src="images/css.png" alt="CSS"></li>
+              <li><img alt="JavaScript-Icon" src="images/js.png" alt="JavaScript"></li>
+              <li><img alt="HTML-Icon" src="images/html.png" alt="HTML"></li>
+              <li><img alt="CSS-Icon" src="images/css.png" alt="CSS"></li>
             </ul>
             <ul class="dt-languages-section">
-              <li><img alt="not found" src="images/dt-js.png" alt="JavaScript"></li>
-              <li><img alt="not found" src="images/dt-html.png" alt="HTML"></li>
-              <li><img alt="not found" src="images/dt-css.png" alt="CSS"></li>
+              <li><img alt="JavaScript-Icon" src="images/dt-js.png" alt="JavaScript"></li>
+              <li><img alt="HTML-Icon" src="images/dt-html.png" alt="HTML"></li>
+              <li><img alt="CSS-Icon" src="images/dt-css.png" alt="CSS"></li>
             </ul>
             <ul class="others-section-ii">
               <li class="others-item-2">Frameworks</li>
-              <li class="others-item-2"><img alt="not found" src="images/right-arrow.png" alt="Right Arrow"></li>
+              <li class="others-item-2"><img alt="More-Icon" src="images/right-arrow.png" alt="Right Arrow"></li>
             </ul>
             <ul class="others-section-ii">
               <li class="others-item-3">Skills</li>
-              <li class="others-arrow"><img alt="not found" src="images/right-arrow.png" alt="Right Arrow"></li>
+              <li class="others-arrow"><img alt="More-Icon" src="images/right-arrow.png" alt="Right Arrow"></li>
             </ul>
           </div>
         </div>
