created new file for javascript

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Muhammad Aleem Portfolio</title>
+    <!-- font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <!-- css -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/work-section.css">
     <link rel="stylesheet" type="text/css" href="css/about-myself.css">
     <link rel="stylesheet" type="text/css" href="css/contact-form.css">
+    <!-- javaScript -->
+    <script src="javaScript/javascript.js"></script>
   </head>
   <body>
     <section class="container">
