--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/about-myself.css">
     <link rel="stylesheet" type="text/css" href="css/contact-form.css">
   </head>
-  <body>
+  <body id="main">
     <section class="container">
       <!-- navbar -->
       <nav class="navbar">
