mobile pop up finalized

--- a/index.html
+++ b/index.html
@@ -99,12 +99,11 @@
               <li>css</li>
               <li>javaScript</li>
             </ul>
+            <div class="modal-btn">
+              <a href="" class="button popup-btn">See Source <img src="images/arrow-icon.png" alt="Arrow-Image"></a>
+              <a href="" class="button popup-btn">See live <img src="images/github-icon.png" alt="GitHub-Image"></a>
+            </div>
 
-          </div>
-
-          <div class="modal-footer">
-            <a href="" class="button popup-btn">See Source <img src="images/arrow-icon.png" alt="Arrow-Image"></a>
-            <a href="" class="button popup-btn">See live <img src="images/github-icon.png" alt="GitHub-Image"></a>
           </div>
 
         </div>
