desktop pop up fixed

--- a/index.html
+++ b/index.html
@@ -91,19 +91,40 @@
               </ul>
             </div>
             <div class="popup-portfolio-image-1"></div>
-            <div class="description">
-              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent
+            <!-- for mobile -->
+            <div class="mob-popup">
+              <div class="description">
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent
+              </div>
+              <ul class="languages">
+                <li>html</li>
+                <li>css</li>
+                <li>javaScript</li>
+              </ul>
+              <div class="modal-btn">
+                <a href="" class="button popup-btn">See Source <img src="images/arrow-icon.png" alt="Arrow-Image"></a>
+                <a href="" class="button popup-btn">See live <img src="images/github-icon.png" alt="GitHub-Image"></a>
+              </div>
             </div>
-            <ul class="languages">
-              <li>html</li>
-              <li>css</li>
-              <li>javaScript</li>
-            </ul>
-            <div class="modal-btn">
-              <a href="" class="button popup-btn">See Source <img src="images/arrow-icon.png" alt="Arrow-Image"></a>
-              <a href="" class="button popup-btn">See live <img src="images/github-icon.png" alt="GitHub-Image"></a>
+            <!-- for desktop -->
+            <div class="dt-popup">
+              <div class="description">
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent
+              </div>
+              <div>
+                <ul class="dt-languages">
+                  <li>html</li>
+                  <li>Ruby on rails</li>
+                  <li>css</li>
+                  <li>javaScript</li>
+                </ul>
+                <div class="modal-btn">
+                  <a href="" class="button popup-btn">See Source <img src="images/arrow-icon.png" alt="Arrow-Image"></a>
+                  <a href="" class="button popup-btn">See live <img src="images/github-icon.png" alt="GitHub-Image"></a>
+                </div>
+              </div>
             </div>
-
+            
           </div>
 
         </div>
