--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
                 <li>2015</li>
               </ul>
             </div>
-            <div class="popup-portfolio-image-1"></div>
+            <!-- <div class=""> -->
+              <img class="popup-image" src="images/dt-uber.png" alt="">
+            <!-- </div> -->
             <!-- for mobile -->
             <div class="mob-popup">
               <div class="description">
@@ -100,6 +102,9 @@
                 <li>html</li>
                 <li>css</li>
                 <li>javaScript</li>
+                <li>area</li>
+                <li>area</li>
+                <li>area</li>
               </ul>
               <div class="modal-btn">
                 <a href="" class="button popup-btn">See Source <img src="images/arrow-icon.png" alt="Arrow-Image"></a>
