Update on html file

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent
               </div>
               <div>
-                <ul class="dt-languages">
-                  <li>html</li>
-                  <li>Ruby on rails</li>
-                  <li>css</li>
-                  <li>javaScript</li>
+                <ul>
+                  <li class="dt-languages">html</li>
+                  <li class="dt-languages">Ruby on rails</li>
+                  <li class="dt-languages">css</li>
+                  <li class="dt-languages">javaScript</li>
                 </ul>
                 <div class="modal-btn">
                   <a href="" class="button popup-btn">See Source <img src="images/arrow-icon.png" alt="Arrow-Image"></a>
